[package]
name = "pavao-src"
version = "4.22.0" # refers to samba version
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = ["external-ffi-bindings", "network-programming"]
description = "Source of libsmbclient and logic to build vendored pavao."
documentation = "https://docs.rs/pavao-src"
homepage = "https://github.com/veeso/pavao"
include = [
  "samba/**/*",
  "src/**/*",
  "build.rs",
  "../LICENSE",
  "../README.md",
  "../CHANGELOG.md",
]
keywords = { workspace = true }
license = { workspace = true }
readme = "../README.md"
repository = { workspace = true }

[lib]
name = "pavao_src"
path = "src/lib.rs"

[dependencies]
cc = "1"
glob = "0.3"
