[package]
name = "pavao-sys"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = ["external-ffi-bindings", "network-programming"]
description = "ffi bindings for libsmbclient. Use Pavao to access Samba shares from Rust."
documentation = "https://docs.rs/pavao-sys"
homepage = "https://github.com/veeso/pavao"
include = [
  "src/**/*",
  "build.rs",
  "../docs/**/*",
  "../LICENSE",
  "../README.md",
  "../CHANGELOG.md",
]
keywords = { workspace = true }
license = { workspace = true }
readme = "../README.md"
repository = { workspace = true }

# C build
build = "build.rs"
links = "smbclient"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pavao_sys"
path = "src/lib.rs"

[dependencies]
libc = "^0.2"

[build-dependencies]
cc = { version = "1", optional = true }
pavao-src = { version = "4.22.0-4", path = "../pavao-src", optional = true }
pkg-config = "0.3"

[features]
vendored = ["dep:cc", "dep:pavao-src"]
