[package]
name = "pavao"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
categories = { workspace = true }
description = "Rust client library for SMB 2/3 based on libsmbclient."
documentation = "https://docs.rs/pavao"
homepage = "https://github.com/veeso/pavao"
include = [
  "src/**/*",
  "examples/**/*",
  "build.rs",
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
]
keywords = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }

# C build
build = "build.rs"
links = "smbclient"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pavao"
path = "src/lib.rs"

[dependencies]
lazy_static = "^1"
libc = "^0.2"
log = "^0.4"
thiserror = "^2"

[dev-dependencies]
argh = "0.1"
env_logger = "0.11"
pretty_assertions = "1"
rpassword = "7"
serial_test = "3"
testcontainers = { version = "0.23", default-features = false, features = [
  "blocking",
] }

[build-dependencies]
cfg_aliases = "0.2"
pkg-config = "0.3"

[features]
debug = []
no-log = ["log/max_level_off"]

[[example]]
name = "transfer"
path = "examples/transfer.rs"

[[example]]
name = "tree"
path = "examples/tree.rs"

[[example]]
name = "treeplus"
path = "examples/treeplus.rs"
